--- a/public/styles/primevue/card.scss
+++ b/public/styles/primevue/card.scss
@@ -3,4 +3,8 @@
 .pc-card {
   background-color: $MAIN_BACKGROUND !important;
   border: 1px solid $MAIN_BORDER !important;
+
+  .p-card-content {
+    height: 300px;
+  }
 }
