--- a/public/styles/primevue/card.scss
+++ b/public/styles/primevue/card.scss
@@ -1,6 +1,6 @@
 @use '../colors' as *;
 
 .pc-card {
-  background-color: $MAIN_BACKGROUND !important;
+  // background-color: $MAIN_BACKGROUND !important;
   border: 1px solid $MAIN_BORDER !important;
 }
