PC-62 first landing page view

--- a/public/styles/_colors.scss
+++ b/public/styles/_colors.scss
@@ -1,4 +1,7 @@
-$MAIN_BACKGROUND: #23343C;
-$MAIN_TEXT: #FFFFFF;
-$MAIN_BORDER: #475E69;
+$MAIN_BACKGROUND: #23343c;
+$MAIN_TEXT: #ffffff;
+$MAIN_BORDER: #475e69;
 $SUBTITLE: #96a7af;
+$LANDING_PAGE__CARD1: #ef9c66;
+$LANDING_PAGE__CARD2: #fcdc94;
+$LANDING_PAGE__CARD3: #c8cfa0;
