feat: added library of contents.

--- a/public/styles/_colors.scss
+++ b/public/styles/_colors.scss
@@ -1,4 +1,6 @@
 $MAIN_BACKGROUND: #96baca;
 $MAIN_TEXT: #ffffff;
-$MAIN_BORDER: #543994;
+$MAIN_BORDER: #3a3994;
 $SUBTITLE: #96a7af;
+$WHITE: #ffffff;
+$BLACK: #000000;
