--- a/public/styles/_global.scss
+++ b/public/styles/_global.scss
@@ -1,7 +1,10 @@
 @use './colors' as *;
+@use './font' as *;
 
 @forward './body.scss';
 @forward 'primevue/card.scss';
+@forward 'primevue/menubar.scss';
+@forward 'primevue/carousel.scss';
 
 body {
   font-family: 'Nunito';
@@ -14,7 +17,13 @@ body {
 }
 
 main {
-  padding: 30px;
+  padding: 100px 200px;
+}
+
+h1 {
+  color: $MAIN_TEXT;
+  font-size: 48px;
+  font-weight: bold;
 }
 
 h2 {
@@ -27,6 +36,10 @@ h3 {
   color: $SUBTITLE;
   font-size: 24px;
   font-weight: 300;
+}
+
+a {
+  text-decoration: none;
 }
 
 .p-menu-end,
